<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_font_size"
        android:paddingTop="14dp"
        android:paddingLeft="16dp"
        />


    <Button
        android:id="@+id/btn_search"
        android:text="@string/search"
        app:icon="@drawable/icon_search"
        style="@style/ThreeMainButtons"
        android:layout_marginTop="24dp"
        />

    <Button
        android:id="@+id/btn_media"
        style="@style/ThreeMainButtons"
        android:text="@string/media"
        app:icon="@drawable/icon_media" />

    <Button
        android:id="@+id/btn_settings"
        app:icon="@drawable/icon_settings"
        android:text="@string/settings"
        style="@style/ThreeMainButtons"
        android:layout_marginBottom="28dp"
        />


</LinearLayout>