<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/icon_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:drawablePadding="20dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/title_font_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size" />
        <Switch
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableRight="@drawable/icon_share"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableRight="@drawable/icon_support"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/write_support"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableRight="@drawable/icon_arrow_forward"
        android:paddingTop="10dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        app:icon="@drawable/icon_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding" />

</LinearLayout>


